--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "dev": "cross-env electron .",
+    "dev": "electron .",
     "package-mac": "electron-builder --mac --x64",
     "package-win32": "electron-builder --win --ia32",
     "package-win": "electron-builder --win --x64",
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "dotenv": "^16.0.3",
-    "electron": "^20.2.0",
-    "electron-builder": "^23.3.3"
+    "electron": "^21.2.2",
+    "electron-builder": "^23.6.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
